# lab2im

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements_vicent.txt
ext/neuron/: layers.py
lab2im/: edit_tensors.py  edit_volumes.py  image_generator.py  lab2im_model.py  layers.py  utils.py
tutorials/: random_contast_generation.py  simple_example.py
